Fix overflow structure.

--- a/style/modules/_module-exercise.scss
+++ b/style/modules/_module-exercise.scss
@@ -1,30 +1,24 @@
 @import "../base/_variables";
 
 .list-exercise {
-  // background: green;
   display: inline-block;
 }
 
 .exercise {
   display: grid;
   grid-template-columns: 1fr 1.3fr 1fr;
-  // padding: 20px;
-  // padding-top: 40px;
 
   // SCROLLBAR
   ::-webkit-scrollbar {
-      width: 0.5em;
+      width: 10px;
   }
   
   ::-webkit-scrollbar-track {
       background: rgba(0, 0, 0, 0.15);
-      border-radius: 10px;
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: rgba(0,0,0, 0.2);
-    outline: 1px solid slategrey;
-    border-radius: 10px;
+    background-color: rgba(0,0,0, 0.4);
   }
 
   .panel-title {
@@ -54,16 +48,18 @@
   .summary {
     background: rgb(33, 35, 45);
     position: relative;
-    border-radius: 4px 0 0 4px;
     display: grid;
-    min-width: 350px;
-    // FIXME: BAAAAAAH 
-    grid-template-rows: 84vh;
+    grid-template-rows: 1fr;
 
     > .inner {
       overflow: auto;
       padding: 25px 30px;
       padding-top: 30px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
   }
 
@@ -83,7 +79,6 @@
   }
 
   .CodeMirror {
-    // width: 100%;
     height: 100%;
     font-size: 13px;
     position: absolute;
@@ -103,30 +98,29 @@
     border: 1px solid rgba(0,0,0,0.5);
     border-top: 0;
     border-bottom: 0;
-    // padding-top: 60px;
     
   }
 
   button {
-    $size: 50px;
+    $size: 30px;
     position: absolute;
-    left: 100%;
+    right: 10px;
     top: 50%;
     transform: translate(-50%, -50%);
     background: $elm-green;
     border: 0;
     color: #fff;
     text-align: center;
-    height: $size;
+    height: $size * 3;
     width: $size;
-    border-radius: $size;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     cursor: pointer;
-    transition: transform ease 0.15s;
-    z-index: 2;
+    border-radius: 4px;
+    transition: transform ease 0.1s;
+    z-index: 100;
 
     &:hover {
-      transform: translate(-50%, -50%) scale(1.2);
+      transform: translate(-50%, -50%) scale(1.1);
     }
   }
 
@@ -146,6 +140,11 @@
       overflow: auto;
       padding: 25px 30px;
       padding-top: 70px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
 
     .test-summary {
